use central library

--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -1,7 +1,10 @@
 ---
 author: "Laura Botzet"
 date: "9/15/2016"
-output: html_document
+output: 
+  html_document:
+    self_contained: false
+    lib_dir: library
 ---
 
 # Data import {.tabset}
