finished personality, calculated risk variable, cleaned up the siblingcount variable, tried to organize ;)

--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -36,9 +36,7 @@ bk_ar1 = read_dta("data/hh14_all_dta/bk_ar1.dta")
 ptrack = read_dta("data/hh14_all_dta/ptrack.dta")
 
 ### IQ Information
-ek_ek1 = read_dta("data/hh14_all_dta/ek_ek1.dta") # under 15yo
 ek_ek2 = read_dta("data/hh14_all_dta/ek_ek2.dta") # over 15yo
-ek_time1 = read_dta("data/hh14_all_dta/ek_time1.dta")
 ek_time2 = read_dta("data/hh14_all_dta/ek_time2.dta")
 # additional information (counting backwards, adaptive testing) for adults
 b3b_cob = read_dta("data/hh14_all_dta/b3b_cob.dta") # over 15yo
@@ -51,10 +49,14 @@ b3a_si = read_dta("data/hh14_all_dta/b3a_si.dta")
 
 ```
 
-## Select data
-```{r select data}
+## Select individual data
+```{r select individual data}
 ### Individuals
 individuals = bk_ar1 %>% select(hhid14_9, pidlink, ar02b, ar10, ar11, ar07, ar08day, ar08mth, ar08yr, ar09, ar18h)
+
+## people whose parents can not be identified have to be marked as NA:
+individuals$ar10[ individuals$ar10>50] = NA
+individuals$ar11[ individuals$ar11>50] = NA
 
 ##create number that should be identical for all siblings in one family
 individuals <- unite(individuals,
@@ -63,47 +65,54 @@ individuals <- unite(individuals,
                   sep = "_",
                   remove = FALSE)
 
-#calculate sibling size
+individuals$hhid14_9_ar10_ar11 = ifelse(is.na(individuals$ar10), NA, individuals$hhid14_9_ar10_ar11)
+individuals$hhid14_9_ar10_ar11 = ifelse(is.na(individuals$ar11), NA, individuals$hhid14_9_ar10_ar11)
+
+##calculate sibling size
 individuals <- ddply(individuals,.(hhid14_9_ar10_ar11),transform,siblingcount=length(hhid14_9_ar10_ar11))
+individuals$siblingcount = ifelse(is.na(individuals$ar10), NA, individuals$siblingcount)
+individuals$siblingcount = ifelse(is.na(individuals$ar11), NA, individuals$siblingcount)
+qplot(individuals$siblingcount)
+
 ##calculate birth order??
 
+```
 
 
+## Select IQ data
+```{r select IQ data}
 ### IQ Informations
-##ek1 (7-14yrs old)
-iq1 = ek_ek1 %>% select(hhid14_9, pidlink, age, sex, ektype, resptype, result, reason, ek1_ans, ek2_ans, ek3_ans, ek4_ans, ek5_ans, ek6_ans, ek7_ans, ek8_ans, ek9_ans, ek10_ans, ek11_ans, ek12_ans, ek13_ans, ek14_ans, ek15_ans, ek16_ans, ek17_ans, ek18_ans, ek19_ans, ek20_ans, ek21_ans, ek22_ans)
-# Participants who took the ek1 in 2007 were given ek2 again - to make sure that the dont appear in both cognitive analyses we have to exclude them
-iq1 = subset(iq1, age<15)
-
 ##ek2 (>14yrs)
 iq2.1 = ek_ek2 %>% select(hhid14_9, pidlink, age, sex, ektype, resptype, result, reason, ek1_ans, ek2_ans, ek3_ans, ek4_ans, ek5_ans, ek6_ans, ek7_ans, ek8_ans, ek9_ans, ek10_ans, ek11_ans, ek12_ans, ek13_ans, ek14_ans, ek15_ans, ek16_ans, ek17_ans, ek18_ans, ek19_ans, ek20_ans, ek21_ans, ek22_ans)
 
 
-#additional informations for adults: counting backwards
+##additional informations for adults: counting backwards
 iq2.2 = b3b_co1 %>% select(hhid14_9, pidlink, co04a, co04b, co04c, co04d, co04e, co07count, co10count)
-#additional informations for adults: adaptive number test
+##additional informations for adults: adaptive number test
 iq2.3 = b3b_cob %>% select(hhid14_9, pidlink, w_abil, cob18, cob19b)
-# put all the informations for participants >= 15 together
+
+## put all the informations for participants >= 15 together
 iq2 = full_join(iq2.1, iq2.2, by = "pidlink")
 iq2 = full_join(iq2, iq2.3, by = "pidlink")
-
-### Put both iq files together
-# iq = bind_rows(iq1, iq2)
 iq = iq2
 
-# ek_ek2 %>% select(matches("ek.+?_ans"))
+### calculate iq scores
+##Raven Test
 answered_raven_items = iq %>% select(ek1_ans:ek6_ans, ek11_ans, ek12_ans)
 psych::alpha(data.frame(answered_raven_items))
 iq$raven = rowMeans( answered_raven_items, na.rm = T)
-library(ggplot2)
+iq$raven[! iq$result %in% 1:2] = NA
 qplot(iq$raven)
 
+##Math Test
 answered_math_items = iq %>% select(ek18_ans:ek22_ans)
 psych::alpha(data.frame(answered_math_items))
 iq$math = rowMeans( answered_math_items, na.rm = T)
+iq$math[! iq$result %in% 1:2] = NA
 qplot(iq$math)
 
-
+##Counting Items
+# Create Right/Wrong Scores for the counting items
 iq$co04aright = as.numeric(iq$co04a == 93)
 iq$co04bright = as.numeric(iq$co04b == iq$co04a-7)
 iq$co04cright = as.numeric(iq$co04c == iq$co04b-7)
@@ -115,6 +124,7 @@ psych::alpha(data.frame(answered_counting_items))
 iq$count_backwards = rowSums( answered_counting_items, na.rm = T) / 5
 qplot(iq$count_backwards)
 
+## Word Memory
 iq$words_immediate = iq$co07count
 iq$words_delayed = iq$co10count
 qplot(iq$words_immediate, iq$words_delayed, geom = "jitter")
@@ -123,44 +133,106 @@ psych::alpha(data.frame(answered_word_items))
 iq$words_remembered_avg = rowMeans( answered_word_items, na.rm = T)
 qplot(iq$words_remembered_avg)
 
+##Adaptive Numbering
 iq$adaptive_numbering = iq$w_abil
 formr::missingness_patterns(iq$adaptive_numbering)
-# psych::alpha(data.frame(adaptive_numbering))
-iq$drew_pentagons = as.numeric(iq$cob19b == 1)
-iq$number_of_animals = iq$cob18
 
-round(cor(iq %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, number_of_animals, drew_pentagons), use = "pairwise.complete.obs"), 2)
-table(iq$raven[! iq$result %in% 1:2])
-iq$raven[! iq$result %in% 1:2] = NA
-table(iq$math[! iq$result %in% 1:2])
-iq$math[! iq$result %in% 1:2] = NA
 
-formr::missingness_patterns(iq %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, number_of_animals, drew_pentagons))
+#iq$drew_pentagons = as.numeric(iq$cob19b == 1)
+#iq$number_of_animals = iq$cob18
 
-iq_responders = filter(iq, result %in% 1:2)
-round(cor(iq_responders %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, number_of_animals, drew_pentagons), use = "pairwise.complete.obs"), 2)
-library(formr)
-crosstabs(~ age + drew_pentagons, data = iq)
+## Correlation of all Iq-Tests
+round(cor(iq %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering), use = "pairwise.complete.obs"), 2)
 
-cor.test(iq_responders$math, iq_responders$raven)
+##Missingness_Patterns
+formr::missingness_patterns(iq %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering))
 
+```
+
+## Select personality data
+```{r select pesonality data}
 ### Personality
 ##Rearrange personality data so that every individual has only one row
 pers = spread(b3b_psn, psntype, psn01)
 ##name columns
-colnames(pers) <- c("hhid14_9", "pid14", "hhid14", "pidlink", "version", "module", "e1", "c1", "o1", "e2r", "n1r", "a1", "n2r", "o2", "c1r", "o3", "a2", "c2", "e3", "a3r", "n3")
-pers = pers %>% select(hhid14_9, pidlink, e1, c1, o1, e2r, n1r, a1, n2r, o2, c1r, o3, a2, c2, e3, a3r, n3)
+colnames(pers) <- c("hhid14_9", "pid14", "hhid14", "pidlink", "version", "module", "e1", "c1", "o1", "e2r", "n1r", "a1", "n2r", "o2", "c2r", "o3", "a2", "c3", "e3", "a3r", "n3")
+pers = pers %>% select(hhid14_9, pidlink, e1, c1, o1, e2r, n1r, a1, n2r, o2, c2r, o3, a2, c3, e3, a3r, n3)
 
-extraversion = pers %>% select(e1, e2r, e3)
+##Extraversion
+pers$e2r_reversed = 6 - pers$e2r
+extraversion = pers %>% select(e1, e2r_reversed, e3)
 psych::alpha(data.frame(extraversion), check.keys = T)
-crosstabs(extraversion$e2r)
-extraversion$e2r = 6 - extraversion$e2r
 pers$big5_ext = rowMeans(extraversion)
 qplot(pers$big5_ext)
 
+##conscientiousness
+pers$c2r_reversed = 6 - pers$c2r
+conscientiousness = pers %>% select(c1, c2r_reversed, c3)
+psych::alpha(data.frame(conscientiousness), check.keys = T)
+pers$big5_con = rowMeans(conscientiousness)
+qplot(pers$big5_con)
+
+##Openness
+openness = pers %>% select(o1, o2, o3)
+psych::alpha(data.frame(openness), check.keys = T)
+pers$big5_open = rowMeans(openness)
+qplot(pers$big5_open)
+
+## Neuroticism
+pers$n1r_reversed = 6 - pers$n1r
+pers$n2r_reversed = 6 - pers$n2r
+neuroticism = pers %>% select(n1r_reversed, n2r_reversed, n3)
+pers$big5_neu = rowMeans(neuroticism)
+qplot(pers$big5_neu)
+
+##Agreeableness
+pers$a3r_reversed = 6- pers$a3r
+agreeableness= pers %>% select(a1, a2, a3r_reversed)
+pers$big5_agree = rowMeans(agreeableness)
+qplot(pers$big5_agree)
+```
+
+
+## Select risk taking data
+```{r select risk taking data}
 ###Risktaking
 risk = b3a_si %>% select(hhid14_9, pidlink, random_si, si01, si02, si03, si04, si05, si11, si12, si13, si14, si15)
-psych::alpha(data.frame(b3a_si %>% select(si01, si02, si03, si04, si11, si12, si13, si14)), check.keys = T)
+
+## 8 means they didnt know which answer they would choose
+risk$si01[ risk$si01 == 8] = NA
+risk$si02[ risk$si02 == 8] = NA
+risk$si03[ risk$si03 == 8] = NA
+risk$si04[ risk$si04 == 8] = NA
+risk$si05[ risk$si05 == 8] = NA
+risk$si11[ risk$si11 == 8] = NA
+risk$si12[ risk$si12 == 8] = NA
+risk$si13[ risk$si13 == 8] = NA
+risk$si14[ risk$si14 == 8] = NA
+risk$si15[ risk$si15 == 8] = NA
+
+## calculate a risk score for risk game A 
+# (5 = gamble averse, Ordinalskala : 1 = risk loving, 4 = risk averse)
+risk$riskA = ifelse(risk$si01 == 1 & risk$si02 == 1, 5,
+             ifelse(risk$si01 == 2 & risk$si03 == 1 & risk$si04 == 1, 4,
+             ifelse(risk$si01 == 2 & risk$si03 == 1 & risk$si04 == 2, 3,
+             ifelse(risk$si01 == 2 & risk$si03 == 2 & risk$si05 == 1, 2,
+             ifelse(risk$si01 == 2 & risk$si03 == 2 & risk$si05 == 2, 1,
+             NA)))))
+qplot(risk$riskA[risk$riskA != 5])
+
+## calculate a risk score for risk game B 
+# (5 = gamble averse, Ordinalskala : 1 = risk loving, 4 = risk averse)
+risk$riskB = ifelse(risk$si11 == 2 & risk$si12 == 1, 5,
+             ifelse(risk$si11 == 1 & risk$si13 == 1 & risk$si14 == 1, 4,
+             ifelse(risk$si11 == 1 & risk$si13 == 1 & risk$si14 == 2, 3,
+             ifelse(risk$si11 == 1 & risk$si13 == 2 & risk$si15 == 1, 2,
+             ifelse(risk$si11 == 1 & risk$si13 == 2 & risk$si15 == 2, 1,
+             NA)))))
+qplot(risk$riskB[risk$riskB !=5])
+
+psych::alpha(data.frame(risk %>% select(riskA, riskB)), check.keys = T)
+
+
 ```
 
 ## Find out if its possible to analyse data for personality (siblings older than 14)
