--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -55,6 +55,7 @@ b3a_si = read_dta("data/hh14_all_dta/b3a_si.dta")
 ### Individuals
 individuals = bk_ar1 %>% select(hhid14_9, pidlink, ar02b, ar10, ar11, ar07, ar08day, ar08mth, ar08yr, ar09, ar18h)
 
+
 ## people whose parents can not be identified have to be marked as NA:
 individuals$ar10[ individuals$ar10>50] = NA
 individuals$ar11[ individuals$ar11>50] = NA
@@ -283,17 +284,37 @@ saveRDS(alldata, file = "data/hh14_all_dta/alldata.dta")
 
 ```{r Calculate age related t-scores}
 
+### IQ
+alldata$raven_t <- 10*ave(alldata$raven, alldata$ar09, FUN=scale) + 50
+qplot(alldata$raven_t)
+alldata$math_t <- 10*ave(alldata$math, alldata$ar09, FUN=scale) + 50
+qplot(alldata$math_t)
+alldata$count_backwards_t <- 10*ave(alldata$count_backwards, alldata$ar09, FUN=scale) + 50
+qplot(alldata$count_backwards_t)
+alldata$words_immediate_t <- 10*ave(alldata$words_immediate, alldata$ar09, FUN=scale) + 50
+qplot(alldata$words_immediate_t)
+alldata$words_delayed_t <- 10*ave(alldata$words_delayed, alldata$ar09, FUN=scale) + 50
+qplot(alldata$words_delayed_t)
+alldata$adaptive_numbering_t <- 10*ave(alldata$adaptive_numbering, alldata$ar09, FUN=scale) + 50
+qplot(alldata$adaptive_numbering_t)
+
+
 ### Personality
-alldata$big5_ext_t <- 10*ave(alldata$big5_ext, alldata$age, FUN=scale) + 50
+alldata$big5_ext_t <- 10*ave(alldata$big5_ext, alldata$ar09, FUN=scale) + 50
 qplot(alldata$big5_ext_t)
-alldata$big5_agree_t <- 10*ave(alldata$big5_agree, alldata$age, FUN=scale) + 50
+alldata$big5_agree_t <- 10*ave(alldata$big5_agree, alldata$ar09, FUN=scale) + 50
 qplot(alldata$big5_agree_t)
-alldata$big5_open_t <- 10*ave(alldata$big5_open, alldata$age, FUN=scale) + 50
+alldata$big5_open_t <- 10*ave(alldata$big5_open, alldata$ar09, FUN=scale) + 50
 qplot(alldata$big5_open_t)
-alldata$big5_con_t <- 10*ave(alldata$big5_con, alldata$age, FUN=scale) + 50
+alldata$big5_con_t <- 10*ave(alldata$big5_con, alldata$ar09, FUN=scale) + 50
 qplot(alldata$big5_con_t)
-alldata$big5_neu_t <- 10*ave(alldata$big5_neu, alldata$age, FUN=scale) + 50
+alldata$big5_neu_t <- 10*ave(alldata$big5_neu, alldata$ar09, FUN=scale) + 50
 qplot(alldata$big5_neu_t)
+
+
+###Risktaking (geht nicht, da es keine intervallskalierte Variable ist (nur 5 level))
+
+
 ```
 
 ###Exploring data
@@ -304,6 +325,16 @@ ggplot(alldata, aes(x=siblingcount, y=birthorder)) + geom_jitter()
 ### Birth order and age
 ggplot(alldata, aes(x=birthorder, y=ar09)) + geom_jitter() + coord_cartesian(ylim = c(0, 100))
 
+### Personality
+ggplot(alldata, aes(x=big5_agree, y=big5_neu)) + geom_jitter()
 
+###Openness and Intelligence
+round(cor(alldata %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, big5_open), use = "pairwise.complete.obs"), 2)
 
+###Other personality factors and Intelligence
+round(cor(alldata %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, big5_con), use = "pairwise.complete.obs"), 2)
+round(cor(alldata %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, big5_ext), use = "pairwise.complete.obs"), 2)
+round(cor(alldata %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, big5_agree), use = "pairwise.complete.obs"), 2)
+round(cor(alldata %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, big5_neu), use = "pairwise.complete.obs"), 2)
+# Opennes has the highest values!
 ```
